--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -78,12 +78,13 @@
                 <ImageView
                     android:id="@+id/title_text"
                     android:layout_width="0dp"
-                    android:layout_height="24dp"
+                    android:layout_height="27dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitStart"
+                    android:translationX="-4dp"
                     app:layout_constraintEnd_toStartOf="@id/refresh_icon"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@id/search_bar"
